<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="app_name">ESDD Block</string>
    <string name="description">This is classic game transfer to live wallpaper</string>
    
    <string name="livewallpaper_settings">Settings</string>
    <string name="livewallpaper_model_title">Select Model</string>
	<string name="livewallpaper_model_summary">Choose which model to play</string>
	<string name="livewallpaper_block_title">Select Block style</string>
	<string name="livewallpaper_block_summary">Choose which block to display</string>
	<string name="livewallpaper_movement_title">Motion</string>
	<string name="livewallpaper_movement_summary">Choose the block movement direction</string>
	<string name="livewallpaper_effect_title">Effect</string>
	<string name="livewallpaper_effect_summary">Apply effect pattern</string>
	
	<string name="version_title">Version</string>
	<string name="version_summary">version 1.1</string>
	<string name="contact_title">Contact</string>
	<string name="contact_summary">Any questions please let me know, Fred,Fan Fangqing (fangqing.fan@hotmail.com)</string>
	
</resources>
